--- a/server/main/src/main/resources/application.properties
+++ b/server/main/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=main
-spring.datasource.url=jdbc:postgresql://localhost:5432/birth_day
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/birth_day
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6380
+
 logging.level.org.springframework.security=DEBUG
 
+app.jwt.secret=adamRainKey
+app.jwt.tokenExpiration=3m
+app.jwt.refreshTokenExpiration=30m
