--- a/server/main/src/main/resources/application.properties
+++ b/server/main/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.data.redis.port=6380
 logging.level.org.springframework.security=DEBUG
 
 app.jwt.secret=adamRainKey
-app.jwt.tokenExpiration=3m
-app.jwt.refreshTokenExpiration=30m
+app.jwt.tokenExpiration=1h
+app.jwt.refreshTokenExpiration=7d
