--- a/server/main/src/main/resources/application.properties
+++ b/server/main/src/main/resources/application.properties
@@ -17,3 +17,9 @@ logging.level.org.springframework.security=DEBUG
 app.jwt.secret=adamRainKey
 app.jwt.tokenExpiration=1h
 app.jwt.refreshTokenExpiration=7d
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
+app.files.dir.images.user-photo=files/images/user_photo/
+
