--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "moment": "^2.30.1",
+    "multipart-parser": "^0.0.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3",
     "vue3-select": "^0.1.2",
